crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__snapshot_code_block_with_comments_and_hr_headings.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/mod.rs
assertion_line: 2019
expression: render_app(&app)
---
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > Describe the project                                                         
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀

 ● 🏗 Architecture

   ```
   crucible/

   ├── crates/

   │   ├── crucible-cli/      # CLI commands

   │   ├── crucible-core/     # Core types

   │   └── crucible-daemon/   # Background daemon

   ├── docs/                  # Documentation

   └── plugins/              # Example plugins

   ```

   🚀 Quick Commands

   ```bash
   # Install

   curl -fsSL https://example.com/install.sh | sh

   ```

   ```bash
   # Chat with AI

   cru chat

   # Start MCP server

   cru mcp

   ```

   📊 Comparison

   ┌──────────────────────┬────────────────┬───────┐
   │ Feature              │ Crucible       │ Other │
   ├──────────────────────┼────────────────┼───────┤
   │ Local-first          │ ✅             │ ❌    │
   ├──────────────────────┼────────────────┼───────┤
   │ Sessions as markdown │ ✅             │ ❌    │
   ├──────────────────────┼────────────────┼───────┤
   │ Semantic search      │ ✅ Block-level │ ❌    │
   └──────────────────────┴────────────────┴───────┘
                                                                                
                                                                                
                                                                                
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 >                                                                              
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 NORMAL  ...                                                              — ctx
